# CrawlStreetJournal

./: .dockerignore  .gitignore  .mailmap  AGENTS.md  Dockerfile  FUNCTIONAL_SPEC.md  README.md  architecture.md  audit_data.py  collector.spec  config.py  docker-compose.yml  error_pages.py  gui.py  launcher.py  launcher_desktop.py  main.py  outbound_http.py  parser.py  pyproject.toml  render.py  requirements.txt  run_background_crawl.py  run_pre_crawl_analysis.py  scraper.py  signals_audit.py  sitemap.py  storage.py  utils.py  viz_api.py  viz_data.py  viz_exports.py  wcag_audit.py
.github/workflows/: build.yml
assets/: icon.icns
examples/: nhs-estate-crawl.defaults.json
playwright-node/: package-lock.json  package.json  playwright.config.ts  smoke.spec.ts
scripts/: build-macos-app.sh  publish-private-github.sh  render_desktop_icons.py
src/csjapp/: __init__.py  __main__.py
static/: manifest.json  sw.js
static/js/: ecosystem.js  reports.js
templates/: audit.html  base.html  download_blocked.html  ecosystem.html  http_error.html  login.html  logs.html  project_defaults.html  project_overview.html  project_settings.html  projects.html  reports.html  results_detail.html  run_config.html  run_monitor.html  run_results.html  runs.html  wcag.html
tests/: conftest.py  seed_test_data.py  test_continue_from.py  test_crawl_rate_limit.py  test_download_blocked.py  test_gui_security.py  test_http_503_queue.py  test_http_error_pages.py  test_import_run_status.py  test_launcher_browser_fallback.py  test_launcher_desktop.py  test_outbound_http.py  test_parallel_worker_domains.py  test_parser.py  test_playwright.py  test_project_metadata.py  test_quit_api.py  test_real_crawl.py  test_refetch_mode.py  test_run_results_metrics.py  test_scraper_errors.py  test_signals_audit.py  test_sitemap.py  test_sitemap_discovery_cache.py  test_utils_csv_rows.py  test_viz_api.py  test_viz_data.py
tools/: fix_project_zip_resume_state.py
